Change background image for house element

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     .house {
       width: 250px;
       height: 250px;
-      background: url('https://i.ibb.co/ZhN3rps/haunted-house.png') no-repeat center/contain;
+      background: url('https://w7.pngwing.com/pngs/222/366/png-transparent-cartoon-halloween-house-holidays-cartoon-fictional-character.png') no-repeat center/contain;
       cursor: pointer;
       transition: transform 0.2s ease;
     }
