Update Halloween message in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <h1>Click the Haunted House... if you dare 👻</h1>
+  <h1>Click the Haunted House...ถ้าได้treatจะได้ตัง1000บ.. Happy Halloween</h1>
   <div class="house" onclick="playGame()"></div>
   <div class="message" id="message"></div>
 
